GearsetPOC/force-app/main/default/objects/SalesforceCriteriaBasedTicketLink__x/SalesforceCriteriaBasedTicketLink__x.object-meta.xml
<CustomObject>
    <description>SalesforceCriteriaBasedTicketLink</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceCriteriaBasedTicketLink</externalName>
    <label>Add a ticket (no override)</label>
    <pluralLabel>Add a ticket (no override)</pluralLabel>
</CustomObject>