GearsetPOC/force-app/main/default/objects/SalesforceCriteriaBasedTicketLink__x/fields/OasisAuditRef__c.field-meta.xml
<CustomField>
    <fullName>OasisAuditRef__c</fullName>
    <description>OasisAuditRef</description>
    <externalDeveloperName>OasisAuditRef</externalDeveloperName>
    <label>Oasis audit ref</label>
    <length>128</length>
    <type>Text</type>
</CustomField>