GearsetPOC/force-app/main/default/objects/SalesforceCriteriaBasedTicketLink__x/fields/Tcn__c.field-meta.xml
<CustomField>
    <fullName>Tcn__c</fullName>
    <description>Tcn</description>
    <externalDeveloperName>Tcn</externalDeveloperName>
    <label>Tcn</label>
    <length>128</length>
    <type>Text</type>
</CustomField>